--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           >
           <ul class="navigation-list list">
             <li class="navigation-list-item">
-              <a class="link" href="index.html">Agencja</a>
+              <a class="link activ" href="index.html">Agencja</a>
             </li>
             <li class="navigation-list-item">
               <a class="link" href="portfolio.html">Portfolio</a>
@@ -135,28 +135,37 @@
           <h2 class="big-header">Czym się zajmujemy</h2>
           <ul class="presentation-list list">
             <li>
-              <img
-                src="images/closeup.jpg"
-                alt="couple"
-                width="370"
-                height="294"
-              />
+              <div class="thumb">
+                <img
+                  src="images/closeup.jpg"
+                  alt="couple"
+                  width="370"
+                  height="294"
+                />
+                <p class="label">APLIKACJE KOMPUTEROWE</p>
+              </div>
             </li>
             <li>
-              <img
-                src="images/webdesigners.jpg"
-                alt="laptop"
-                width="370"
-                height="294"
-              />
+              <div class="thumb">
+                <img
+                  src="images/webdesigners.jpg"
+                  alt="laptop"
+                  width="370"
+                  height="294"
+                />
+                <p class="label">APLIKACJE MOBILNE</p>
+              </div>
             </li>
             <li>
-              <img
-                src="images/createartist.jpg"
-                alt="project"
-                width="370"
-                height="294"
-              />
+              <div class="thumb">
+                <img
+                  src="images/createartist.jpg"
+                  alt="project"
+                  width="370"
+                  height="294"
+                />
+                <p class="label">ROZWIAZANIA GRAFICZNE</p>
+              </div>
             </li>
           </ul>
         </div>
