--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
               <a class="link" href="index.html">Agencja</a>
             </li>
             <li class="navigation-list-item">
-              <a class="link" href="portfolio.html">Portfolio</a>
+              <a class="link activ" href="portfolio.html">Portfolio</a>
             </li>
             <li class="navigation-list-item">
               <a class="link" href="index.html">Kontakt</a>
