Add transition to sm icons

--- a/index.html
+++ b/index.html
@@ -185,18 +185,26 @@
                 <h3 class="small-header-index">John Doe</h3>
                 <h4 class="photo-text">Product designer</h4>
                 <div class="icons-social-media">
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk"></use>
-                  </svg>
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk_t"></use>
-                  </svg>
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk_f"></use>
-                  </svg>
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk_in"></use>
-                  </svg>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk"></use>
+                    </svg>
+                  </div>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk_t"></use>
+                    </svg>
+                  </div>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk_f"></use>
+                    </svg>
+                  </div>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk_in"></use>
+                    </svg>
+                  </div>
                 </div>
               </li>
               <li class="white designers-photo">
@@ -209,18 +217,26 @@
                 <h3 class="small-header-index">John Doe</h3>
                 <h4 class="photo-text">Frontend Developer</h4>
                 <div class="icons-social-media">
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk"></use>
-                  </svg>
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk_t"></use>
-                  </svg>
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk_f"></use>
-                  </svg>
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk_in"></use>
-                  </svg>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk"></use>
+                    </svg>
+                  </div>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk_t"></use>
+                    </svg>
+                  </div>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk_f"></use>
+                    </svg>
+                  </div>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk_in"></use>
+                    </svg>
+                  </div>
                 </div>
               </li>
               <li class="white designers-photo">
@@ -233,18 +249,26 @@
                 <h3 class="small-header-index">John Doe</h3>
                 <h4 class="photo-text">Marketing</h4>
                 <div class="icons-social-media">
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk"></use>
-                  </svg>
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk_t"></use>
-                  </svg>
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk_f"></use>
-                  </svg>
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk_in"></use>
-                  </svg>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk"></use>
+                    </svg>
+                  </div>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk_t"></use>
+                    </svg>
+                  </div>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk_f"></use>
+                    </svg>
+                  </div>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk_in"></use>
+                    </svg>
+                  </div>
                 </div>
               </li>
               <li class="white designers-photo">
@@ -257,18 +281,26 @@
                 <h3 class="small-header-index">John Doe</h3>
                 <h4 class="photo-text">Ul designer</h4>
                 <div class="icons-social-media">
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk"></use>
-                  </svg>
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk_t"></use>
-                  </svg>
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk_f"></use>
-                  </svg>
-                  <svg class="icon-sm" width="44" height="44">
-                    <use href="images/icons.svg#icon-ellipse_mk_in"></use>
-                  </svg>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk"></use>
+                    </svg>
+                  </div>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk_t"></use>
+                    </svg>
+                  </div>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk_f"></use>
+                    </svg>
+                  </div>
+                  <div class="icon-social-media">
+                    <svg class="icon-sm" width="44" height="44">
+                      <use href="images/icons.svg#icon-ellipse_mk_in"></use>
+                    </svg>
+                  </div>
                 </div>
               </li>
             </ul>
@@ -365,6 +397,28 @@
                 <use href="images/icons.svg#icon-ellipse_mk_in"></use>
               </svg>
             </div>
+            <!-- <div class="icons-social-media">
+              <div class="icon-social-media">
+                <svg class="icon-sm" width="44" height="44">
+                  <use href="images/icons.svg#icon-ellipse_mk"></use>
+                </svg>
+              </div>
+              <div class="icon-social-media">
+                <svg class="icon-sm" width="44" height="44">
+                  <use href="images/icons.svg#icon-ellipse_mk_t"></use>
+                </svg>
+              </div>
+              <div class="icon-social-media">
+                <svg class="icon-sm" width="44" height="44">
+                  <use href="images/icons.svg#icon-ellipse_mk_f"></use>
+                </svg>
+              </div>
+              <div class="icon-social-media">
+                <svg class="icon-sm" width="44" height="44">
+                  <use href="images/icons.svg#icon-ellipse_mk_in"></use>
+                </svg>
+              </div>
+            </div> -->
           </div>
         </div>
       </div>
