--- a/index.html
+++ b/index.html
@@ -384,41 +384,28 @@
           <div class="social-media-footer">
             <h3 class="small-header-footer">DOŁĄCZ DO NAS</h3>
             <div class="icons-social-media-footer">
-              <svg class="icon-sm-footer" width="44" height="44">
-                <use href="images/icons.svg#icon-ellipse_mk"></use>
-              </svg>
-              <svg class="icon-sm-footer" width="44" height="44">
-                <use href="images/icons.svg#icon-ellipse_mk_t"></use>
-              </svg>
-              <svg class="icon-sm-footer" width="44" height="44">
-                <use href="images/icons.svg#icon-ellipse_mk_f"></use>
-              </svg>
-              <svg class="icon-sm-footer" width="44" height="44">
-                <use href="images/icons.svg#icon-ellipse_mk_in"></use>
-              </svg>
-            </div>
-            <!-- <div class="icons-social-media">
-              <div class="icon-social-media">
-                <svg class="icon-sm" width="44" height="44">
+              <div class="icon-social-media-footer">
+                <svg class="icon-sm-footer" width="44" height="44">
                   <use href="images/icons.svg#icon-ellipse_mk"></use>
                 </svg>
               </div>
-              <div class="icon-social-media">
-                <svg class="icon-sm" width="44" height="44">
+              <div class="icon-social-media-footer">
+                <svg class="icon-sm-footer" width="44" height="44">
                   <use href="images/icons.svg#icon-ellipse_mk_t"></use>
                 </svg>
               </div>
-              <div class="icon-social-media">
-                <svg class="icon-sm" width="44" height="44">
+              <div class="icon-social-media-footer">
+                <svg class="icon-sm-footer" width="44" height="44">
                   <use href="images/icons.svg#icon-ellipse_mk_f"></use>
                 </svg>
               </div>
-              <div class="icon-social-media">
-                <svg class="icon-sm" width="44" height="44">
+              <div class="icon-social-media-footer">
+                <svg class="icon-sm-footer" width="44" height="44">
                   <use href="images/icons.svg#icon-ellipse_mk_in"></use>
                 </svg>
               </div>
-            </div> -->
+            </div>
+          
           </div>
         </div>
       </div>
