--- a/portfolio.html
+++ b/portfolio.html
@@ -243,18 +243,26 @@
           <div class="social-media-footer">
             <h3 class="small-header-footer">DOŁĄCZ DO NAS</h3>
             <div class="icons-social-media-footer">
-              <svg class="icon-sm-footer" width="44" height="44">
-                <use href="images/icons.svg#icon-ellipse_mk"></use>
-              </svg>
-              <svg class="icon-sm-footer" width="44" height="44">
-                <use href="images/icons.svg#icon-ellipse_mk_t"></use>
-              </svg>
-              <svg class="icon-sm-footer" width="44" height="44">
-                <use href="images/icons.svg#icon-ellipse_mk_f"></use>
-              </svg>
-              <svg class="icon-sm-footer" width="44" height="44">
-                <use href="images/icons.svg#icon-ellipse_mk_in"></use>
-              </svg>
+              <div class="icon-social-media-footer">
+                <svg class="icon-sm-footer" width="44" height="44">
+                  <use href="images/icons.svg#icon-ellipse_mk"></use>
+                </svg>
+              </div>
+              <div class="icon-social-media-footer">
+                <svg class="icon-sm-footer" width="44" height="44">
+                  <use href="images/icons.svg#icon-ellipse_mk_t"></use>
+                </svg>
+              </div>
+              <div class="icon-social-media-footer">
+                <svg class="icon-sm-footer" width="44" height="44">
+                  <use href="images/icons.svg#icon-ellipse_mk_f"></use>
+                </svg>
+              </div>
+              <div class="icon-social-media-footer">
+                <svg class="icon-sm-footer" width="44" height="44">
+                  <use href="images/icons.svg#icon-ellipse_mk_in"></use>
+                </svg>
+              </div>
             </div>
           </div>
         </div>
