goit-markup-hw-05

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,12 +82,24 @@
             <ul class="portfolio-item-list list">
               <li>
                 <div class="portfolio-item">
-                  <img
-                    src="images/technotrack.jpg"
-                    alt="Technocrack"
-                    width="370"
-                    height="294"
-                  />
+                  <div>
+                    <div class="text-in-box">
+                      <div class="overlay">
+                        <p class="overlay-text">
+                          Technocrack jest popularną platformą wykorzystywaną do
+                          rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                          platformę do celów szpiegowskich i ataków na
+                          niezabezpieczone serwery konkurencji
+                        </p>
+                      </div>
+                      <img
+                        src="images/technotrack.jpg"
+                        alt="Technocrack"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
+                  </div>
                   <div class="portfolio-photo-descriprion">
                     <h3 class="small-header-portfolio">Technotrack</h3>
                     <h4 class="portfolio-photo-text">Strona internetowa</h4>
@@ -96,12 +108,24 @@
               </li>
               <li>
                 <div class="portfolio-item">
-                  <img
-                    src="images/graphicnew.jpg"
-                    alt="IT"
-                    width="370"
-                    height="294"
-                  />
+                  <div>
+                    <div class="text-in-box">
+                      <div class="overlay">
+                        <p class="overlay-text">
+                          Technocrack jest popularną platformą wykorzystywaną do
+                          rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                          platformę do celów szpiegowskich i ataków na
+                          niezabezpieczone serwery konkurencji
+                        </p>
+                      </div>
+                      <img
+                        src="images/graphicnew.jpg"
+                        alt="IT"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
+                  </div>
                   <div class="portfolio-photo-descriprion">
                     <h3 class="small-header-portfolio">Grafika narzędzia IT</h3>
                     <h4 class="portfolio-photo-text">Dizajn</h4>
@@ -110,12 +134,24 @@
               </li>
               <li>
                 <div class="portfolio-item">
-                  <img
-                    src="images/seafood.jpg"
-                    alt="Seafood"
-                    width="370"
-                    height="294"
-                  />
+                  <div>
+                    <div class="text-in-box">
+                      <div class="overlay">
+                        <p class="overlay-text">
+                          Technocrack jest popularną platformą wykorzystywaną do
+                          rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                          platformę do celów szpiegowskich i ataków na
+                          niezabezpieczone serwery konkurencji
+                        </p>
+                      </div>
+                      <img
+                        src="images/seafood.jpg"
+                        alt="Seafood"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
+                  </div>
                   <div class="portfolio-photo-descriprion">
                     <h3 class="small-header-portfolio">Restauracja Seafood</h3>
                     <h4 class="portfolio-photo-text">Aplikacja</h4>
@@ -124,12 +160,24 @@
               </li>
               <li>
                 <div class="portfolio-item">
-                  <img
-                    src="images/projectprime.jpg"
-                    alt="Prime"
-                    width="370"
-                    height="294"
-                  />
+                  <div>
+                    <div class="text-in-box">
+                      <div class="overlay">
+                        <p class="overlay-text">
+                          Technocrack jest popularną platformą wykorzystywaną do
+                          rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                          platformę do celów szpiegowskich i ataków na
+                          niezabezpieczone serwery konkurencji
+                        </p>
+                      </div>
+                      <img
+                        src="images/projectprime.jpg"
+                        alt="Prime"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
+                  </div>
                   <div class="portfolio-photo-descriprion">
                     <h3 class="small-header-portfolio">Project Prime</h3>
                     <h4 class="portfolio-photo-text">Marketing</h4>
@@ -138,12 +186,24 @@
               </li>
               <li>
                 <div class="portfolio-item">
-                  <img
-                    src="images/projectboxes.jpg"
-                    alt="Boxes"
-                    width="370"
-                    height="294"
-                  />
+                  <div>
+                    <div class="text-in-box">
+                      <div class="overlay">
+                        <p class="overlay-text">
+                          Technocrack jest popularną platformą wykorzystywaną do
+                          rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                          platformę do celów szpiegowskich i ataków na
+                          niezabezpieczone serwery konkurencji
+                        </p>
+                      </div>
+                      <img
+                        src="images/projectboxes.jpg"
+                        alt="Boxes"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
+                  </div>
                   <div class="portfolio-photo-descriprion">
                     <h3 class="small-header-portfolio">Project Boxes</h3>
                     <h4 class="portfolio-photo-text">Aplikacja</h4>
@@ -152,12 +212,24 @@
               </li>
               <li>
                 <div class="portfolio-item">
-                  <img
-                    src="images/inspiration.jpg"
-                    alt="Inspiration"
-                    width="370"
-                    height="294"
-                  />
+                  <div>
+                    <div class="text-in-box">
+                      <div class="overlay">
+                        <p class="overlay-text">
+                          Technocrack jest popularną platformą wykorzystywaną do
+                          rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                          platformę do celów szpiegowskich i ataków na
+                          niezabezpieczone serwery konkurencji
+                        </p>
+                      </div>
+                      <img
+                        src="images/inspiration.jpg"
+                        alt="Inspiration"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
+                  </div>
                   <div class="portfolio-photo-descriprion">
                     <h3 class="small-header-portfolio">
                       Inspiration has on Border
@@ -166,15 +238,26 @@
                   </div>
                 </div>
               </li>
-
               <li>
                 <div class="portfolio-item">
-                  <img
-                    src="images/magazine.jpg"
-                    alt="Magazine"
-                    width="370"
-                    height="294"
-                  />
+                  <div>
+                    <div class="text-in-box">
+                      <div class="overlay">
+                        <p class="overlay-text">
+                          Technocrack jest popularną platformą wykorzystywaną do
+                          rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                          platformę do celów szpiegowskich i ataków na
+                          niezabezpieczone serwery konkurencji
+                        </p>
+                      </div>
+                      <img
+                        src="images/magazine.jpg"
+                        alt="Magazine"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
+                  </div>
                   <div class="portfolio-photo-descriprion">
                     <h3 class="small-header-portfolio">
                       Magazyn Limited Edition
@@ -185,12 +268,24 @@
               </li>
               <li>
                 <div class="portfolio-item">
-                  <img
-                    src="images/projectlab.jpg"
-                    alt="LAB"
-                    width="370"
-                    height="294"
-                  />
+                  <div>
+                    <div class="text-in-box">
+                      <div class="overlay">
+                        <p class="overlay-text">
+                          Technocrack jest popularną platformą wykorzystywaną do
+                          rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                          platformę do celów szpiegowskich i ataków na
+                          niezabezpieczone serwery konkurencji
+                        </p>
+                      </div>
+                      <img
+                        src="images/projectlab.jpg"
+                        alt="LAB"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
+                  </div>
                   <div class="portfolio-photo-descriprion">
                     <h3 class="small-header-portfolio">Project LAB</h3>
                     <h4 class="portfolio-photo-text">Marketing</h4>
@@ -199,12 +294,24 @@
               </li>
               <li>
                 <div class="portfolio-item">
-                  <img
-                    src="images/growingbusiness.jpg"
-                    alt="Growing"
-                    width="370"
-                    height="294"
-                  />
+                  <div>
+                    <div class="text-in-box">
+                      <div class="overlay">
+                        <p class="overlay-text">
+                          Technocrack jest popularną platformą wykorzystywaną do
+                          rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                          platformę do celów szpiegowskich i ataków na
+                          niezabezpieczone serwery konkurencji
+                        </p>
+                      </div>
+                      <img
+                        src="images/growingbusiness.jpg"
+                        alt="Growing"
+                        width="370"
+                        height="294"
+                      />
+                    </div>
+                  </div>
                   <div class="portfolio-photo-descriprion">
                     <h3 class="small-header-portfolio">Growing Business</h3>
                     <h4 class="portfolio-photo-text">Aplikacja</h4>
