--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
             <h2 class="hidden">Portfolio</h2>
             <ul class="portfolio-item-list list">
               <li>
-                <div class="portfolio-item">
+                <div class="portfolio-item portfolio-item-all">
                   <div>
                     <div class="text-in-box">
                       <div class="overlay">
@@ -107,7 +107,7 @@
                 </div>
               </li>
               <li>
-                <div class="portfolio-item">
+                <div class="portfolio-item portfolio-item-all">
                   <div>
                     <div class="text-in-box">
                       <div class="overlay">
@@ -133,7 +133,7 @@
                 </div>
               </li>
               <li>
-                <div class="portfolio-item">
+                <div class="portfolio-item portfolio-item-all">
                   <div>
                     <div class="text-in-box">
                       <div class="overlay">
@@ -159,7 +159,7 @@
                 </div>
               </li>
               <li>
-                <div class="portfolio-item">
+                <div class="portfolio-item portfolio-item-all">
                   <div>
                     <div class="text-in-box">
                       <div class="overlay">
@@ -185,7 +185,7 @@
                 </div>
               </li>
               <li>
-                <div class="portfolio-item">
+                <div class="portfolio-item portfolio-item-all">
                   <div>
                     <div class="text-in-box">
                       <div class="overlay">
@@ -211,7 +211,7 @@
                 </div>
               </li>
               <li>
-                <div class="portfolio-item">
+                <div class="portfolio-item portfolio-item-all">
                   <div>
                     <div class="text-in-box">
                       <div class="overlay">
@@ -239,7 +239,7 @@
                 </div>
               </li>
               <li>
-                <div class="portfolio-item">
+                <div class="portfolio-item portfolio-item-all">
                   <div>
                     <div class="text-in-box">
                       <div class="overlay">
@@ -267,7 +267,7 @@
                 </div>
               </li>
               <li>
-                <div class="portfolio-item">
+                <div class="portfolio-item portfolio-item-all">
                   <div>
                     <div class="text-in-box">
                       <div class="overlay">
@@ -293,7 +293,7 @@
                 </div>
               </li>
               <li>
-                <div class="portfolio-item">
+                <div class="portfolio-item portfolio-item-all">
                   <div>
                     <div class="text-in-box">
                       <div class="overlay">
